[tool.poetry]
name = "pythonautoattendance"
version = "0.1.0"
description = ""
authors = ["vsedov <viv.sedov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
rich = "^12.5.1"
tqdm = "^4.64.1"
icecream = "^2.1.3"
python-dotenv = "^0.21.0"
psutil = "^5.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
